# DataScope-Studio

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RUNNING.md  SECURITY.md  TESTING.md  pyproject.toml  requirements-dev.txt  产品设计.md  软件产品设计.md
.github/workflows/: quality.yml  release-stability.yml  release.yml
.history/docs/: OPERATION_20260603181843.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: diagnostic_log.rs  main.rs
docs/: OPERATION.md  README.md  _navbar.md  _sidebar.md  index.html
docs/architecture/: README.md  data-flow.md  module-overview.md  state-model.md
docs/code/: README.md  api-service.md  desktop-frontend.md  python-packages.md
docs/examples/: plugin.yaml  template.yaml
docs/faq/: troubleshooting.md
docs/guide/: package-install.md  prerequisites.md  run-app.md
docs/interfaces/: api.md  cli.md  mapping-yaml.md
docs/modules/: README.md  adapters.md  desktop.md  plugin-template.md  project-packages.md  query.md  rerun-integration.md  workspace-catalog.md
docs/workflow/: import-convert.md  package-import-export.md  query-export.md  testing.md
packaging/dev/: clean_local_artifacts.py
packaging/release/: check_version.py  prepare_artifacts.py  sanity_check.py  strict_acceptance.py
packaging/runtime/: build_runtime.py  build_tauri.py
services/api/: pyproject.toml
services/api/datascope_api/: main.py
services/api/src/datascope_api/: __init__.py  launcher.py  main.py  services.py
tests/: api_helpers.py  ros2_bag_helpers.py
tests/fixtures/: sample_sensor.csv  sample_sensor.jsonl
tests/integration/: test_api.py  test_cli.py  test_cv_pipeline.py  test_diagnostics.py  test_mapping_workflow.py  test_mcap_pipeline.py  (+7 more)
(+80 files in other folders)
