[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascope-api"
version = "1.0.0"
description = "FastAPI backend for DataScope Studio."
requires-python = ">=3.10"
dependencies = [
  "datascope-core",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datascope_api*"]
