[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascope-api"
version = "1.0.0"
description = "FastAPI backend for DataScope Studio."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "datascope-core",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
datascope-api = "datascope_api.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datascope_api*"]
