[package]
name = "datascope-studio"
version = "0.3.1"
description = "DataScope Studio desktop shell"
authors = ["DataScope Studio"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
